added networkidentifier to set an id for each hedgehog.